Fixed UI bug on desktop where the scrollbar would appear regardless of viewport height

--- a/src/styles/global/globals.css
+++ b/src/styles/global/globals.css
@@ -16,7 +16,7 @@ html, body {
 body {
     overflow: overlay;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     -webkit-overflow-scrolling: touch;
 }
 
